Fix background image on Safari for iOS. Fixed#77

--- a/source/assets/styles/global/_page.scss
+++ b/source/assets/styles/global/_page.scss
@@ -29,6 +29,7 @@
     padding: ($global-spacing * 2) 0;
     background: transparent;
     color: #fff;
+    box-shadow: none;
   }
 
   &--light {
